Added Search, Map Screen and Favorites groups and storyboard folders

--- a/labs-ios-starter/Login/Base.lproj/Main.storyboard
+++ b/labs-ios-starter/Login/Base.lproj/Main.storyboard
@@ -42,10 +42,10 @@
             </objects>
             <point key="canvasLocation" x="1545" y="84"/>
         </scene>
-        <!--Profiles-->
+        <!--Search-->
         <scene sceneID="3Na-TO-5aB">
             <objects>
-                <viewControllerPlaceholder storyboardName="Profiles" id="aOC-qF-9qB" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Search" id="aOC-qF-9qB" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="LNe-Yc-RsA"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7XU-Dw-F8B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
