--- a/labs-ios-starter/Favorites/Favorites.storyboard
+++ b/labs-ios-starter/Favorites/Favorites.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Favorites View Controller-->
         <scene sceneID="e9w-Hd-45a">
             <objects>
-                <viewController id="fhG-KI-gxj" sceneMemberID="viewController">
+                <viewController id="fhG-KI-gxj" customClass="FavoritesViewController" customModule="labs_ios_starter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Pg-Lc-WNU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
