--- a/labs-ios-starter/Search/Search.storyboard
+++ b/labs-ios-starter/Search/Search.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="1r6-xo-eoO">
             <objects>
-                <viewController id="7Fk-Ad-CIb" sceneMemberID="viewController">
+                <viewController id="7Fk-Ad-CIb" customClass="SearchViewController" customModule="labs_ios_starter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="U9p-ig-Nv9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
