--- a/labs-ios-starter/Search/Search.storyboard
+++ b/labs-ios-starter/Search/Search.storyboard
@@ -16,16 +16,113 @@
                     <view key="view" contentMode="scaleToFill" id="U9p-ig-Nv9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="frE-Ow-IiM">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eOg-oI-DvJ" customClass="CardView" customModule="labs_ios_starter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="562" width="414" height="334"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qFG-Cc-DMo">
+                                <rect key="frame" x="20" y="251" width="374" height="105"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="cAn-9R-9T8"/>
+                                    <constraint firstAttribute="height" constant="105" id="zSA-lx-15X"/>
+                                </constraints>
+                                <string key="text">Ut enim ad minim veniam, quis 
+nostrud exercitation ullamco </string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqJ-tT-hhk">
+                                <rect key="frame" x="20" y="144.5" width="374" height="100.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="8Yc-nl-ich"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum 
+dolor sit amet</string>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="42"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jEt-75-7XU">
+                                <rect key="frame" x="35" y="436" width="344" height="36"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="344" id="S8b-Ik-klP"/>
+                                    <constraint firstAttribute="height" constant="36" id="kTO-Eb-xo4"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for a location" translatesAutoresizingMaskIntoConstraints="NO" id="rWl-W9-8WM">
+                                <rect key="frame" x="27" y="426" width="360" height="56"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="360" id="rfe-oE-2Ib"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="touristMap" translatesAutoresizingMaskIntoConstraints="NO" id="XIi-pr-dlF">
+                                <rect key="frame" x="0.0" y="590" width="414" height="306"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="414" id="LXz-ob-Okp"/>
+                                    <constraint firstAttribute="height" constant="306" id="qgZ-0k-ZuN"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66d-ah-7SF">
+                                <rect key="frame" x="351" y="44" width="36" height="34"/>
+                                <state key="normal" image="favoriteButton"/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="WoH-XK-DAw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jEt-75-7XU" firstAttribute="top" secondItem="U9p-ig-Nv9" secondAttribute="top" constant="436" id="Fen-Pz-RgM"/>
+                            <constraint firstItem="XIi-pr-dlF" firstAttribute="centerX" secondItem="U9p-ig-Nv9" secondAttribute="centerX" id="H0D-Js-l74"/>
+                            <constraint firstItem="qFG-Cc-DMo" firstAttribute="top" secondItem="DqJ-tT-hhk" secondAttribute="bottom" constant="6" id="Mjk-2H-P7K"/>
+                            <constraint firstItem="66d-ah-7SF" firstAttribute="top" secondItem="WoH-XK-DAw" secondAttribute="top" id="Orm-VC-iKp"/>
+                            <constraint firstItem="jEt-75-7XU" firstAttribute="centerX" secondItem="U9p-ig-Nv9" secondAttribute="centerX" id="U9j-5W-zc8"/>
+                            <constraint firstItem="qFG-Cc-DMo" firstAttribute="centerX" secondItem="rWl-W9-8WM" secondAttribute="centerX" id="VTK-gt-KHk"/>
+                            <constraint firstAttribute="bottom" secondItem="XIi-pr-dlF" secondAttribute="bottom" id="YoH-hH-dbl"/>
+                            <constraint firstItem="eOg-oI-DvJ" firstAttribute="leading" secondItem="WoH-XK-DAw" secondAttribute="leading" id="aKb-xN-vtY"/>
+                            <constraint firstItem="frE-Ow-IiM" firstAttribute="trailing" secondItem="WoH-XK-DAw" secondAttribute="trailing" id="aWm-9f-iBf"/>
+                            <constraint firstItem="eOg-oI-DvJ" firstAttribute="trailing" secondItem="WoH-XK-DAw" secondAttribute="trailing" id="cod-J7-ODH"/>
+                            <constraint firstItem="DqJ-tT-hhk" firstAttribute="centerX" secondItem="U9p-ig-Nv9" secondAttribute="centerX" id="dJ6-L4-BaH"/>
+                            <constraint firstItem="eOg-oI-DvJ" firstAttribute="top" secondItem="jEt-75-7XU" secondAttribute="bottom" constant="90" id="eLO-tu-zEM"/>
+                            <constraint firstItem="frE-Ow-IiM" firstAttribute="leading" secondItem="WoH-XK-DAw" secondAttribute="leading" id="ezJ-Vq-HbL"/>
+                            <constraint firstAttribute="bottom" secondItem="eOg-oI-DvJ" secondAttribute="bottom" id="he0-JT-hhg"/>
+                            <constraint firstItem="qFG-Cc-DMo" firstAttribute="centerX" secondItem="U9p-ig-Nv9" secondAttribute="centerX" id="j4r-eE-kXP"/>
+                            <constraint firstItem="rWl-W9-8WM" firstAttribute="centerX" secondItem="U9p-ig-Nv9" secondAttribute="centerX" id="luc-V6-bki"/>
+                            <constraint firstItem="rWl-W9-8WM" firstAttribute="leading" secondItem="WoH-XK-DAw" secondAttribute="leading" constant="27" id="mV0-AI-rgB"/>
+                            <constraint firstItem="rWl-W9-8WM" firstAttribute="top" secondItem="qFG-Cc-DMo" secondAttribute="bottom" constant="70" id="nIz-ua-1Mg"/>
+                            <constraint firstAttribute="bottom" secondItem="frE-Ow-IiM" secondAttribute="bottom" id="nSp-7h-SbP"/>
+                            <constraint firstItem="jEt-75-7XU" firstAttribute="top" secondItem="qFG-Cc-DMo" secondAttribute="bottom" constant="80" id="pTK-Li-7Ki"/>
+                            <constraint firstItem="WoH-XK-DAw" firstAttribute="trailing" secondItem="66d-ah-7SF" secondAttribute="trailing" constant="27" id="pdA-FR-ALf"/>
+                            <constraint firstItem="XIi-pr-dlF" firstAttribute="leading" secondItem="WoH-XK-DAw" secondAttribute="leading" id="tSX-R3-9MF"/>
+                            <constraint firstItem="XIi-pr-dlF" firstAttribute="trailing" secondItem="WoH-XK-DAw" secondAttribute="trailing" id="wP9-V8-lHA"/>
+                            <constraint firstItem="frE-Ow-IiM" firstAttribute="top" secondItem="U9p-ig-Nv9" secondAttribute="top" id="yly-3A-9G9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backgroundGradient" destination="frE-Ow-IiM" id="TtY-Mr-TBD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9yE-FL-ajC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="490" y="130"/>
+            <point key="canvasLocation" x="489.85507246376818" y="129.91071428571428"/>
         </scene>
     </scenes>
     <resources>
+        <image name="favoriteButton" width="35.5" height="33.5"/>
+        <image name="touristMap" width="961" height="743"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
