--- a/labs-ios-starter/Search/Search.storyboard
+++ b/labs-ios-starter/Search/Search.storyboard
@@ -80,6 +80,9 @@ dolor sit amet</string>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66d-ah-7SF">
                                 <rect key="frame" x="351" y="44" width="36" height="34"/>
                                 <state key="normal" image="favoriteButton"/>
+                                <connections>
+                                    <segue destination="RGt-l3-Amp" kind="presentation" identifier="searchToFavorites" modalPresentationStyle="fullScreen" id="10j-ZQ-uI4"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="WoH-XK-DAw"/>
@@ -118,6 +121,16 @@ dolor sit amet</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9yE-FL-ajC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="489.85507246376818" y="129.91071428571428"/>
+        </scene>
+        <!--Favorites-->
+        <scene sceneID="ENq-cX-3NS">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Favorites" id="RGt-l3-Amp" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="WQL-ha-anc"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yh7-Nd-T0L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1112" y="121"/>
         </scene>
     </scenes>
     <resources>
