--- a/labs-ios-starter/Map Screen/MapScreen.storyboard
+++ b/labs-ios-starter/Map Screen/MapScreen.storyboard
@@ -278,7 +278,7 @@
                     </view>
                     <connections>
                         <outlet property="averageAgeLabel" destination="ihY-EL-lXB" id="5uA-lo-fcR"/>
-                        <outlet property="averageIncome" destination="Rqj-rJ-2vT" id="B1m-Eb-lar"/>
+                        <outlet property="averageIncomeLabel" destination="Rqj-rJ-2vT" id="n9h-C5-efb"/>
                         <outlet property="cityLabel" destination="bX5-C6-Cgw" id="sOT-dW-zs1"/>
                         <outlet property="employmentLabel" destination="Z3I-O0-Jve" id="XzQ-hD-Tr9"/>
                         <outlet property="favoriteButton" destination="aOY-yt-gpM" id="P1o-og-iTK"/>
